Fix should not wrap codes

--- a/source/css/personal-style.css
+++ b/source/css/personal-style.css
@@ -1,3 +1,4 @@
 code, pre, samp {
-    font-family: "Monaco"
+    font-family: "Monaco";
+    white-space: pre !important;
 }
